# docreader-mcp

./: DEVPLAN.md  README.md  deps.sh  kiso.toml  pyproject.toml  run.py
src/kiso_docreader_mcp/: __init__.py  docreader_runner.py  server.py
tests/: create_fixtures.py  test_docreader_runner.py  test_run.py  test_server.py
tests/fixtures/: sample.csv  sample.docx  sample.txt  sample.xlsx
