[project]
name = "tool-docreader"
version = "0.1.0"
description = "Document text extraction tool for Kiso"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
pythonpath = ["."]
